tests/fixtures/invalid/pow_none_dict_dict.py
# Cannot call pow() with None, Dict[str, int], Dict[str, int]
x = pow(None, {"a": 1}, {"a": 1})
